setting: DB 설정 파일 추가 및 gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
+#**/src/main/resources/application.yml
+**/src/main/resources/application-secrets.yml
+
 .idea
 *.iws
 *.iml
