--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,10 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
 
     // mysql
-    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // postgresql
+    runtimeOnly 'org.postgresql:postgresql'
 
     // 테스트 관련
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
