ㄹsetting: 사spring security 사용을 ìì 위한 ì±config ë파일 ì추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,17 +6,18 @@ spring:
     active: default,secrets
 
   #  // test DB (DB ?? ? ?? ?? ??)
-  #  datasource:
-  #    url: jdbc:h2:mem:test;MODE=MySQL
-  #    driver-class-name: org.h2.Driver
-  #    username: sa
-  #    password:
-  #  h2:
-  #    console:
-  #      enabled: true
-  datasource:
-    url: jdbc:postgresql://localhost:5432/air_jet
-    driver-class-name: org.postgresql.Driver
+    datasource:
+      url: jdbc:h2:mem:test;MODE=MySQL
+      driver-class-name: org.h2.Driver
+      username: sa
+      password:
+    h2:
+      console:
+        enabled: true
+
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/air_jet
+#    driver-class-name: org.postgresql.Driver
 
   jpa:
     show-sql: true
