feat: 기본 Data 추가를 위한 로직 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
     active: default,secrets
 
   #  // test DB (DB ?? ? ?? ?? ??)
-    datasource:
-      url: jdbc:h2:mem:test;MODE=MySQL
-      driver-class-name: org.h2.Driver
-      username: sa
-      password:
-    h2:
-      console:
-        enabled: true
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
 
 #  datasource:
 #    url: jdbc:postgresql://localhost:5432/air_jet
@@ -21,7 +21,8 @@ spring:
 
   jpa:
     show-sql: true
-    database: postgresql
+#    database: postgresql
+    database: h2
     hibernate:
       ddl-auto: create
     properties:
