feat: jwt token responseEnity header 값에 담아서 반환 및 ApiUtis class 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: air_jet
 
+  jackson:
+    default-property-inclusion: non_null
+
   profiles:
     active: default,secrets
 
