--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,26 +8,26 @@ spring:
   profiles:
     active: default,secrets
 
-  #  // test DB (DB ?? ? ?? ?? ??)
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: true
-
+#  #  // test DB (DB ?? ? ?? ?? ??)
 #  datasource:
-#    url: jdbc:postgresql://localhost:5432/air_jet
-#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:h2:mem:testdb
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password:
+#  h2:
+#    console:
+#      enabled: true
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/air_jet
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     show-sql: true
 #    database: postgresql
-    database: h2
+    database: postgresql
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
