feat: map entity 생성 및 기본 구조 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
 
   jpa:
     show-sql: true
-#    database: postgresql
+#    database: h2
     database: postgresql
     hibernate:
       ddl-auto: update
