--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    // FireBase
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
+
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
