--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
+    // aws
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
     // 개발 편의성
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -69,6 +72,7 @@ dependencies {
 
     // postgresql
     runtimeOnly 'org.postgresql:postgresql'
+
 
     // 테스트 관련
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
