--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     default-property-inclusion: non_null
 
   profiles:
-    active: default,secrets
+    active: default,secrets,aws
 
 #  #  // test DB (DB ?? ? ?? ?? ??)
 #  datasource:
