--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ bin/
 ### IntelliJ IDEA ###
 #**/src/main/resources/application.yml
 **/src/main/resources/application-secrets.yml
+**/src/main/resources/application-dev.yml
 **/src/main/resources/application-aws.yml
-**/src/main/resources/firebase-service-account.json
 
 .idea
 *.iws
