--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-#**/src/main/resources/application.yml
+**/src/main/resources/application.yml
 **/src/main/resources/application-secrets.yml
 **/src/main/resources/application-dev.yml
 **/src/main/resources/application-aws.yml
