--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,5 @@ spring:
   application:
     name: air_jet
 
-  servlet:
-    multipart:
-      enabled: true
-      max-file-size: 10MB
-      max-request-size: 10MB
-
-  jackson:
-    default-property-inclusion: non_null
-
   profiles:
-    active: default,dev,aws
-
-
-
-server:
-  port: 7757
+    active: default,dev
