--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Set up environment variables
+      env:
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -47,9 +57,31 @@ jobs:
         ECR_REPOSITORY: air-jet
         IMAGE_TAG: air-jet
       run: |
-        docker buildx build --platform=linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker buildx build --platform=linux/amd64 \
+        --build-arg DATABASE_USERNAME=${{ env.DATABASE_USERNAME }} \
+        --build-arg DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }} \
+        --build-arg DATABASE_URL=${{ env.DATABASE_URL }} \
+        --build-arg AWS_BUCKET_NAME=${{ env.AWS_BUCKET_NAME }} \
+        --build-arg AWS_REGION=${{ env.AWS_REGION }} \
+        --build-arg AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }} \
+        --build-arg AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} \
+        -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+
+    - name: Run Docker container
+      run: |
+        docker run -d \
+          -e DATABASE_USERNAME=${{ env.DATABASE_USERNAME }} \
+          -e DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }} \
+          -e DATABASE_URL=${{ env.DATABASE_URL }} \
+          -e AWS_BUCKET_NAME=${{ env.AWS_BUCKET_NAME }} \
+          -e AWS_REGION=${{ env.AWS_REGION }} \
+          -e AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }} \
+          -e AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} \
+          -p 7757:7757 \
+          ${{ steps.login-ecr.outputs.registry }}/air-jet:air-jet
 
     - name: Get current time
       uses: 1466587594/get-current-time@v2
