--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Auto delploy Docker AirJet
+name: Auto deploy Docker AirJet
 
 on:
   push:
@@ -13,26 +13,28 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set up environment variables
-      env:
-        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
-        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Export environment variables
+      run: |
+        echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}" >> $GITHUB_ENV
+        echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> $GITHUB_ENV
+        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+        echo "AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}" >> $GITHUB_ENV
+        echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
+        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+
     - name: Set YML
       run: |
         mkdir -p src/main/resources
-        echo "${{ secrets.APPLICATION_LOCAL_YML }}"  | base64 --decode > src/main/resources/application-dev.yml
-        find src
+        echo "${{ secrets.APPLICATION_LOCAL_YML }}" | base64 --decode > src/main/resources/application-dev.yml
+        cat src/main/resources/application-dev.yml
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
@@ -67,10 +69,8 @@ jobs:
         --build-arg AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} \
         -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-
-    - name: Run Docker container
+    - name: Debug Docker run
       run: |
         docker run -d \
           -e DATABASE_USERNAME=${{ env.DATABASE_USERNAME }} \
@@ -82,6 +82,9 @@ jobs:
           -e AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} \
           -p 7757:7757 \
           ${{ steps.login-ecr.outputs.registry }}/air-jet:air-jet
+
+    - name: Verify Dockerrun.aws.json
+      run: cat deploy/Dockerrun.aws.json
 
     - name: Get current time
       uses: 1466587594/get-current-time@v2
@@ -99,11 +102,11 @@ jobs:
     - name: Beanstalk Deploy
       uses: einaregilsson/beanstalk-deploy@v14
       with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }} ## 계정 ACCESS KEY 값
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: ${{ secrets.EB_APP_NAME }} ## AWS EB 애플리케이션 이름
-        environment_name: ${{ secrets.EB_ENV_NAME }} ## AWS EB 환경 이름
+        application_name: ${{ secrets.EB_APP_NAME }}
+        environment_name: ${{ secrets.EB_ENV_NAME }}
         version_label: earth-docker-${{steps.current-time.outputs.formattedTime}}
-        region: ${{ secrets.AWS_REGION }}    ## ap-northeast-2
+        region: ${{ secrets.AWS_REGION }}
         deployment_package: deploy/deploy.zip
         wait_for_environment_recovery: 200
