--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,16 +13,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Export environment variables
-      run: |
-        echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}" >> $GITHUB_ENV
-        echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> $GITHUB_ENV
-        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
-        echo "AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }}" >> $GITHUB_ENV
-        echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
-        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -39,6 +29,12 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
+      env:
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: ./gradlew clean build -x test
 
     - name: Configure AWS credentials
@@ -55,36 +51,27 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: air-jet
         IMAGE_TAG: air-jet
       run: |
         docker buildx build --platform=linux/amd64 \
-        --build-arg DATABASE_USERNAME=${{ env.DATABASE_USERNAME }} \
-        --build-arg DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }} \
-        --build-arg DATABASE_URL=${{ env.DATABASE_URL }} \
-        --build-arg AWS_BUCKET_NAME=${{ env.AWS_BUCKET_NAME }} \
-        --build-arg AWS_REGION=${{ env.AWS_REGION }} \
-        --build-arg AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }} \
-        --build-arg AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} \
-        -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} \
+          --build-arg DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
+          --build-arg DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
+          --build-arg AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
+          --build-arg AWS_REGION=${{ secrets.AWS_REGION }} \
+          --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-    - name: Debug Docker run
-      run: |
-        docker run -d \
-          -e DATABASE_USERNAME=${{ env.DATABASE_USERNAME }} \
-          -e DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }} \
-          -e DATABASE_URL=${{ env.DATABASE_URL }} \
-          -e AWS_BUCKET_NAME=${{ env.AWS_BUCKET_NAME }} \
-          -e AWS_REGION=${{ env.AWS_REGION }} \
-          -e AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }} \
-          -e AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} \
-          -p 7757:7757 \
-          ${{ steps.login-ecr.outputs.registry }}/air-jet:air-jet
-
-    - name: Verify Dockerrun.aws.json
-      run: cat deploy/Dockerrun.aws.json
 
     - name: Get current time
       uses: 1466587594/get-current-time@v2
@@ -106,7 +93,7 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: ${{ secrets.EB_APP_NAME }}
         environment_name: ${{ secrets.EB_ENV_NAME }}
-        version_label: earth-docker-${{steps.current-time.outputs.formattedTime}}
+        version_label: airjet-docker-${{steps.current-time.outputs.formattedTime}}
         region: ${{ secrets.AWS_REGION }}
         deployment_package: deploy/deploy.zip
         wait_for_environment_recovery: 200
